# eekboard

./: .dir-locals.el  .gitignore  AUTHORS  Makefile.am  README  TODO  autogen.sh  configure.ac  eekboard-sample.conf  index.html
bindings/: Makefile.am
bindings/python/: Makefile.am
bindings/python/eekboard/: Makefile.am  __init__.py  client.py  context.py  eekboard.py  keysym.py  serializable.py  symbol.py  text.py
bindings/vala/: Makefile.am  eek-xkl-0.90.deps
bindings/vala/eek-0.1/: eek-0.1.files  eek-0.1.metadata
bindings/vala/eek-0.90/: eek-0.90.defines  eek-0.90.files  eek-0.90.gi  eek-0.90.metadata  eek-0.90.namespace
bindings/vala/eek-clutter-0.1/: eek-clutter-0.1.metadata  eek-clutter-0.1.namespace
bindings/vala/eek-clutter-0.90/: eek-clutter-0.90.files  eek-clutter-0.90.gi
bindings/vala/eek-gtk-0.1/: eek-gtk-0.1.files
bindings/vala/eek-gtk-0.90/: eek-gtk-0.90.files  eek-gtk-0.90.gi  eek-gtk-0.90.metadata  eek-gtk-0.90.namespace
bindings/vala/eek-xkb-0.1/: eek-xkb-0.1.files
bindings/vala/eek-xkb-0.90/: eek-xkb-0.90.files  eek-xkb-0.90.gi  eek-xkb-0.90.metadata  eek-xkb-0.90.namespace
bindings/vala/eek-xkl-0.1/: eek-xkl-0.1.namespace
bindings/vala/eek-xkl-0.90/: eek-xkl-0.90.files  eek-xkl-0.90.gi  eek-xkl-0.90.metadata
bindings/vala/eekboard-0.90/: eekboard-0.90.defines  eekboard-0.90.files  eekboard-0.90.gi  eekboard-0.90.metadata  eekboard-0.90.namespace
data/: Makefile.am  eekboard-autostart.desktop.in  eekboard-server.service.in  eekboard.css  eekboard.desktop.in  org.fedorahosted.eekboard.gschema.xml.in
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
data/keyboards/: Makefile.am  ar.xml  as-inscript.xml  be.xml  bn-inscript.xml  fa.xml  gu-inscript.xml  he.xml  hi-inscript.xml  jp-kana.xml  kana.xml  keyboards.xml  kk.xml  kn-inscript.xml  ks-inscript.xml  ks.xml  mai-inscript.xml  ml-inscript.xml  mr-inscript.xml  my.xml  or-inscript.xml  pa-inscript.xml  ru.xml  sd-inscript.xml  ta-inscript.xml  te-inscript.xml  th.xml  ua.xml  ug.xml  us-qwerty.xml  us.xml  zh-bopomofo.xml
data/keyboards/geometry/: compact.xml
data/keyboards/symbols/: ar.xml  as-inscript.xml  be.xml  bn-inscript.xml  fa.xml  gu-inscript.xml  he.xml  ja-kana.xml  kk.xml  kn-inscript.xml  ks-inscript.xml  ks.xml  mai-inscript.xml  ml-inscript.xml  mr-inscript.xml  my.xml  or-inscript.xml  pa-inscript.xml  ru.xml  sd-inscript.xml  ta-inscript.xml  te-inscript.xml  th.xml  ua.xml  ug.xml  us.xml  zh-bopomofo.xml
data/themes/: Makefile.am  default.css
docs/: Makefile.am
docs/reference/: Makefile.am
docs/reference/eek/: Makefile.am  eek-docs.sgml  eek-overview.xml  eek-sections.txt
docs/reference/eek/html/: api-index-full.html  apireference.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  eek-EekClutterKeyboard.html  eek-EekContainer.html  eek-EekElement.html  eek-EekGtkKeyboard.html  eek-EekKey.html  eek-EekKeyboard.html  eek-EekLayout.html  eek-EekSection.html  eek-EekXkbLayout.html  eek-EekXklLayout.html  eek-eek-keysym.html  eek-eek-types.html  eek-overview.html  eek.devhelp  eek.devhelp2  index.html  index.sgml  object-tree.html
docs/reference/eekboard/: Makefile.am  eekboard-docs.sgml  eekboard-sections.txt  eekboard.types
eek/: Makefile.am  eek-0.1.pc.in  eek-0.90.pc.in  eek-clutter-0.1.pc.in  eek-clutter-0.90.pc.in  eek-clutter-drawing-context.c  eek-clutter-drawing-context.h  eek-clutter-key-actor.c  eek-clutter-key-actor.h  eek-clutter-key.c  eek-clutter-key.h  eek-clutter-keyboard.c  eek-clutter-keyboard.h  eek-clutter-private.c  eek-clutter-private.h  eek-clutter-renderer.c  eek-clutter-renderer.h  eek-clutter-section.c  eek-clutter-section.h  eek-clutter.h  eek-clutter.pc.in  eek-container.c  eek-container.h  eek-drawing-context.c  eek-drawing-context.h  eek-drawing.c  eek-drawing.h  eek-element.c  eek-element.h  eek-enumtypes.c.template  eek-enumtypes.h.template  eek-gtk-0.1.pc.in  eek-gtk-0.90.pc.in  eek-gtk-key.c  eek-gtk-key.h  eek-gtk-keyboard.c  eek-gtk-keyboard.h  eek-gtk-private.c  eek-gtk-private.h  eek-gtk-renderer.c  (+75 more)
eekboard/: Makefile.am  eekboard-0.90.pc.in  eekboard-client.c  eekboard-client.h  eekboard-context-service.c  eekboard-context-service.h  eekboard-context.c  eekboard-context.h  eekboard-device.c  eekboard-device.h  eekboard-eekboard.c  eekboard-eekboard.h  eekboard-keyboard.c  eekboard-keyboard.h  eekboard-marshalers.list  eekboard-proxy.c  eekboard-server.c  eekboard-server.h  eekboard-service.c  eekboard-service.h  eekboard-xklutil.c  eekboard.h
examples/: Makefile.am  eek-clutter-xkb-test.c  eek-gtk-xkb-test.c  eekboard-inscript.in  gen-inscript-keyboard.py  inscript2.xml
examples/eekboard-inscript/: Makefile.am  eekboard-inscript.in  inscript.py  main.py
examples/eekxml/: Makefile.am  eekxml.in  mim2remap  mim2remap.el
examples/simple-client/: Makefile.am  main.c  simple-client
po/: POTFILES.in  POTFILES.skip  ja.po
src/: Makefile.am  client-main.c  client.c  client.h  desktop-client-main.c  desktop-client.c  desktop-client.h  eekboard-gtk.c  eekboard-server.service.in  eekboard.c  preferences-dialog.c  preferences-dialog.h  preferences-dialog.ui  proxy.c  proxy.h  server-context-service.c  server-context-service.h  server-context.c  server-context.h  server-main.c  server-server.c  server-server.h  server-service.c  server-service.h  server.c  server.h  setup-main.c  system-client-main.c  system-client.c  system-client.h  xklutil.c  xklutil.h  xml-main.c
tests/: Makefile.am  eek-simple-test.c  eek-xkb-test.c  eek-xml-test.c  test-keyboard.xml
